Ingress/IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: nginx-deployment-app1-svc
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: nginx-deployment-app2-svc
                port:
                  number: 80
